Changing education layout

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ div.education-custom-card-header {
 
 span.education-custom-card-header {
     font-size: 20px;
+    font-weight: bold;
 }
 
 span.education-custom-card-sub-header {
