Fix publications url

--- a/style.css
+++ b/style.css
@@ -44,12 +44,12 @@ div.workexperiences-custom-card-body {
 /******************************************************************************/
 
 /* PUBBLICATIONS */
-span.pubblications-number {
+span.publications-number {
     font-size: 19px;
 }
-span.pubblications-author {}
-span.pubblications-title {}
-span.pubblications.conference {}
+span.publications-author {}
+span.publications-title {}
+span.publications.conference {}
 /******************************************************************************/
 
 /* ATTENDANCE */
