--- a/style.css
+++ b/style.css
@@ -75,15 +75,35 @@ span.attendance-venue {
 
 /* POSTS */
 span.posts-title {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: bold;
 }
 span.posts-subtitle {
     font-size: 35px;
     font-weight: bold;
 }
+span.posts-subsection-title {
+    font-size: 30px;
+    font-weight: bold;
+}
 span.posts-auth-date-info {
     color: grey;
+}
+
+div.source-code {
+    padding-left: 10px;
+    padding-bottom: 0;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: lightgoldenrodyellow;
+    border-color: black;
+    border: 1px solid black;
+}
+span.source-code-input {
+    color: grey;
+}
+span.source-code-output {
+    color: purple;
 }
 /******************************************************************************/
 
