Add simpoints post

--- a/style.css
+++ b/style.css
@@ -124,4 +124,8 @@ a.projects-link {
     /* border: 1px solid black; */
     border-radius: 3%;
 }
+
+.src-code {
+    color: purple;
+}
 /******************************************************************************/
